--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <main>
     <h1>Hello World!</h1>
     <p>This is my very first website!</p>
+    <p>I'd like to formally announce that Steve is a buttface.</p>
 </main>
 
 <footer>
